# SY6522

./: .gitignore  CMakeLists.txt  README.md  buildcommand.txt
include/: SY6522.h
packaging/: CMakeLists.txt  SY6522Config.cmake
src/: SY6522.cpp
